corrected visible height pixels ipad

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1702,7 +1702,7 @@ a:active {
   }
 }
 
-@media screen and (min-width: 767px) and (max-width: 768px) and (min-height: 1023px) and (max-height: 1024px) and (orientation: portrait), screen and (min-width: 833px) and (max-width: 834px) and (height: 1112px) and (orientation: portrait), screen and (min-width: 1023px) and (max-width: 1024px) and (min-height: 1365px) and (max-height: 1366px) and (orientation: portrait) {
+@media screen and (min-width: 767px) and (max-width: 768px) and (min-height: 1023px) and (max-height: 1024px) and (orientation: portrait), screen and (min-width: 833px) and (max-width: 834px) and (min-height: 1111px) and (max-height: 1112px) and (orientation: portrait), screen and (min-width: 1023px) and (max-width: 1024px) and (min-height: 1365px) and (max-height: 1366px) and (orientation: portrait) {
   .cart-wrapper {
     padding-top: 2vw;
     padding-bottom: 25vw;
